@startuml

class InterfacciaCatalogo <<boundary>> {
    - gestore: GestoreCatalogo
    + mostraCatalogo(): void
    + aggiornaStanza(): void
    
}

class GestoreCatalogo <<controller>> {
    + aggiornaStanza(idStanza: String, tipo: String, descrizione: String): String
    + elencaStanze(): List
}

class Stanza <<entity>> {
    - idStanza: String
    - stato: Boolean
    - descrizione: String
    - prezzo: Double
    - nome: String
    - tipo: String
    - suggerimenti: List
    + isDisponibile(): Boolean
    + setStato(stato: Boolean): void
    + setDatiStanze(nome : String, tipo : String, descrizione : String): void
    + getIdStanza(): String
    + getDescrizione(): String
    + getPrezzo(): Double
    + getSuggerimenti(): List
    + getNome(): String
    + getTipo(): String
}

InterfacciaCatalogo --> GestoreCatalogo
GestoreCatalogo ..> Stanza : <<modifica>>

class InterfacciaPrenotazione <<boundary>> {
    - gestore: GestorePrenotazione
    - gestoreCatalogo: GestoreCatalogo
    + mostraPrenotazioniCliente(idCliente: String): void
    + mostraTuttePrenotazioni(): void
    + prenota(idCliente: String): void
    + disdetta(idcliente: String): void 
    + modifica(idCliente: String): void
    + trovaPerId(idCLiente: String, prefisso: String): void
}

class GestorePrenotazione <<controller>> {
    + prenota(idCLiente: String, idStanza: String, giorno: String, ora: String): String
    + disdetta(idCliente: String, idPrenotazione: String): String
    + modificaPrenotazione(idPrenotazione: String, idCliente: String, nuovo_giorno: String, nuova_ora: String): String
    + elencaPrenotazioneCliente(idCliente: String): List
    + elencaTuttePrenotazioni(): List
}

class Prenotazione <<entity>> {
    - idPrenotazione: String
    - stato: Boolean
    - ora: String
    - giorno: String
    - statoDisdetta: Boolean
    - idCliente: String
    - idStanza: String
    + setStatoDisdetta(statoDisdetta: Boolean): void
    + setStato(stato: Boolean): void
    + getIdPrenotazione(): String
    + getOra(): String
    + getGiorno(): String
    + getStato(): Boolean
    + getStatoDisdetta(): Boolean
    + getIdCliente(): String
    + getIdStanza(): String

}

InterfacciaPrenotazione --> GestorePrenotazione
GestorePrenotazione ..> Stanza : <<verifica>>
GestorePrenotazione ..> Prenotazione : <<gestisce>>


class InterfacciaAccount <<boundary>> {
    - gestore: GestoreAccount
    + registra(): void
    + accediCliente(): Cliente
    + accediAmministratore(): Amministratore
}

class GestoreAccount <<controller>> {
    + registrazione(email: String, password: String): String
    + accessoCliente(email: String, password: String): String
    + accessoAmministratore(email: String, password: String): String
}

abstract class Utente <<entity>> {
    - email: String
    - password: String
    - statoAccesso: Boolean
    + setStatoAccesso(eseguito: Boolean): void
    + getEmail(): String
    + getPassword(): String
    + getStatoAccesso(): Boolean
}

InterfacciaAccount --> GestoreAccount
GestoreAccount ..> Utente : <<gestisce>>

class InterfacciaCliente <<boundary>> {
    - gestore: GestoreCliente
    + mostraClienti(): void

}

class GestoreCliente <<controller>> {
    + elencaClienti(): List
}   

class Cliente <<entity>> {
    - idCliente: String
    + getIdCliente(): String
}
class Partita <<entity>>{
    -idPartita: String
    -idCliente: String
    -idPrenotazione: String
    -tempoInizio: time
    -tempoFine: time
    -esito: String
    +isAvviata(): Boolean
    +getEsito(): String
    +avvia(): void
    +termina(): String
    +abbandona(): String
    +chiediSuggerimento(suggerimenti: List): String
    +getIdPartita(): String
    +getIdPrenotazione(): String
    +getIdClienti(): String
}

class GestorePartita <<controller>>{
    +avviaPartita(idPrenotazione: String, idCliente: String): Tuple
    +terminaPartita(): String
    +abbandonaPartita(): String
    +chiediSuggerimento(): String
    +elencaStoricoPartite(idCliente: String): List
}

class InterfacciaPartita<<boundary>>{
    -gestore: GestorePartita
    -gestorePrenotazione: GestorePrenotazione
    +avviaPartita(idCliente: String): void
    +terminaPartita():void
    +abbandonaPartita(): void
    +chiediSuggerimento(): void
    +visualizzaStoricoPartite(idCliente: String): void
}

class Amministratore <<entity>> {
    - idAdmin: String
    + getIdAdmin(): String

}

InterfacciaPartita-->GestorePartita
GestorePartita..>Partita: gestisce

InterfacciaCliente --> GestoreCliente
GestoreCliente ..> Cliente : <<recupera>>
Cliente --|> Utente
Amministratore --|> Utente

@enduml